--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,43 +2,29 @@ body {
   background-color: olive;
 }
 
-.grid {
-  width: 600px;
-  height: 500px;
+#startButton {
+  width: 200px;
+  height: 100px;
   margin: 0 auto;
   background-color: blue;
   padding: 20px 40px 40px 40px;
   border-radius: 40px;
   border: 2px solid chocolate;
   box-shadow: 10px 15px 5px chocolate;
-}
-
-.grid h1 {
-  font-family: "Times New Roman", Times, serif;
-  background-color: yellowgreen;
-  font-size: 50px;
-  text-align: center;
-  color: lightcoral;
-  padding: 4px 0px;
-  border-radius: 50px;
-}
-
-.grid #question {
-  font-family: sans-serif;
   font-size: 20px;
+  font-weight: bold;
+}
+
+#question {
+  font-family: sans-serif;
+  font-size: 30px;
   color: black;
 }
 
-.buttons {
-  margin-top: 20px;
-}
-
-#btn0,
-#btn1,
-#btn2,
-#btn3,
-#btn4 {
-  background-color: lightblue;
+.choice {
+  margin-top: 40px;
+  background-color: orangered;
+  font-size: bold;
   width: 300px;
   font-size: 20px;
   color: whitesmoke;
